--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --experimental-modules webserserver.mjs",
+    "start-dev": "nodemon --experimental-modules webserserver.mjs",
+    "test": "mocha"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.9",
-    "bootstrap": "^4.1.1"
+    "bootstrap": "^4.1.1",
+    "express": "^4.16.3",
+    "hapi": "^17.4.0",
+    "inert": "^5.1.0",
+    "moment": "^2.22.1"
   },
   "devDependencies": {
     "jest": "^22.4.3"
