--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.16.3",
     "hapi": "^17.4.0",
     "inert": "^5.1.0",
-    "moment": "^2.22.1"
+    "moment": "^2.22.1",
+    "mongoose": "^5.1.0"
   },
   "devDependencies": {
     "jest": "^22.4.3"
