--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node --experimental-modules webserserver.mjs",
     "start-dev": "nodemon --experimental-modules webserserver.mjs",
-    "test": "mocha"
+    "test-mocha": "mocha",
+    "test": "jasmine"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "mongoose": "^5.1.0"
   },
   "devDependencies": {
+    "jasmine": "^3.1.0",
     "jest": "^22.4.3"
   }
 }
